[gd_scene load_steps=4 format=3 uid="uid://3mxcrytk1kud"]

[ext_resource type="Script" uid="uid://dc6lqw6dmfe1y" path="res://Scripts/EndgameScreen.gd" id="1_mgr3d"]
[ext_resource type="FontFile" uid="uid://l1q8mfvbxty3" path="res://Fonts/dyslexiafont/OpenDyslexic-Regular.otf" id="2_6d17n"]
[ext_resource type="Texture2D" uid="uid://rgl03eh75egv" path="res://gui/Update/UI/victory UI.png" id="2_frm3f"]

[node name="EndgameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mgr3d")

[node name="ResultPanel" type="TextureRect" parent="."]
custom_minimum_size = Vector2(500, 350)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -283.0
offset_top = -355.0
offset_right = 344.0
offset_bottom = 268.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_frm3f")

[node name="VBoxContainer" type="VBoxContainer" parent="ResultPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 155.0
offset_top = 47.0
offset_right = -142.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ResultLabel" type="Label" parent="ResultPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_fonts/font = ExtResource("2_6d17n")
theme_override_font_sizes/font_size = 30
text = "Victory!"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="ResultPanel/VBoxContainer"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
theme_override_colors/font_color = Color(0.101961, 0.101961, 0.101961, 1)
theme_override_fonts/font = ExtResource("2_6d17n")
theme_override_font_sizes/font_size = 24
text = "You defeated the enemy!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator" type="HSeparator" parent="ResultPanel/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="VBoxContainer" parent="ResultPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="ContinueButton" type="Button" parent="ResultPanel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_6d17n")
theme_override_font_sizes/font_size = 24
text = "Next"

[node name="ButtonsContainer" type="HBoxContainer" parent="ResultPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="RestartButton" type="Button" parent="ResultPanel/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_6d17n")
theme_override_font_sizes/font_size = 24
text = "Retry"

[node name="QuitButton" type="Button" parent="ResultPanel/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_6d17n")
theme_override_font_sizes/font_size = 24
text = "Return"

[connection signal="pressed" from="ResultPanel/VBoxContainer/ButtonContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="ResultPanel/VBoxContainer/ButtonsContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="ResultPanel/VBoxContainer/ButtonsContainer/QuitButton" to="." method="_on_quit_button_pressed"]
